--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "@supabase/supabase-js": "^2.51.0",
     "@stripe/react-stripe-js": "^3.7.0", 
     "@stripe/stripe-js": "^7.4.0"
+  "three": "^0.160.0",
+"@react-three/fiber": "^8.15.0",
+"@react-three/drei": "^9.96.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -86,5 +89,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+    "@types/three": "^0.160.0"
   }
 }
