--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,25 @@
 {
-  "name": "Martin Builder - FieldTrack Pro",
-  "short_name": "FieldTrack",
-  "description": "Construction time tracking, daily logs, and job management for field teams",
+  "name": "Martin Builder Operations OS",
+  "short_name": "Martin OS",
+  "description": "Martin Builder's comprehensive construction management platform with PWA capabilities",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#22c55e",
-  "orientation": "portrait",
+  "background_color": "#f3f4f6",
+  "theme_color": "#4179bc",
+  "orientation": "portrait-primary",
   "categories": ["business", "productivity", "construction"],
   "prefer_related_applications": false,
   "icons": [
     {
       "src": "https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png",
-      "sizes": "192x64",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
       "src": "https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png",
-      "sizes": "192x64",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
@@ -28,21 +28,15 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
   "screenshots": [],
   "shortcuts": [
     {
-      "name": "Clock In",
-      "short_name": "Clock In",
-      "description": "Start tracking time",
-      "url": "/",
+      "name": "Jobs Dashboard",
+      "short_name": "Jobs",
+      "description": "View and manage all jobs",
+      "url": "/office?tab=jobs",
       "icons": [
         {
           "src": "https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png",
@@ -52,10 +46,23 @@
       ]
     },
     {
-      "name": "Daily Log",
-      "short_name": "Log",
-      "description": "Submit daily log",
-      "url": "/",
+      "name": "Building Estimator",
+      "short_name": "BIM",
+      "description": "3D building estimator with SmartBuild",
+      "url": "/building-estimator",
+      "icons": [
+        {
+          "src": "https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Financial Dashboard",
+      "short_name": "Financials",
+      "description": "Track budgets and profitability",
+      "url": "/office?tab=financials",
       "icons": [
         {
           "src": "https://cdn-ai.onspace.ai/onspace/files/EvPiYskzE4vCidikEdjr5Z/MB_Logo_Green_192x64_12.9kb.png",
