--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#f3f4f6",
+  "background_color": "#000000",
   "theme_color": "#4179bc",
   "orientation": "portrait-primary",
   "categories": ["business", "productivity", "construction"],
