--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
       "src": "/martin-logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ],
   "screenshots": [],
@@ -24,40 +24,19 @@
       "name": "Jobs Dashboard",
       "short_name": "Jobs",
       "description": "View and manage all jobs",
-      "url": "/office?tab=jobs",
-      "icons": [
-        {
-          "src": "/martin-logo.png",
-          "sizes": "192x192",
-          "type": "image/png"
-        }
-      ]
+      "url": "/office?tab=jobs"
     },
     {
       "name": "Building Estimator",
       "short_name": "BIM",
       "description": "3D building estimator with SmartBuild",
-      "url": "/building-estimator",
-      "icons": [
-        {
-          "src": "/martin-logo.png",
-          "sizes": "192x192",
-          "type": "image/png"
-        }
-      ]
+      "url": "/building-estimator"
     },
     {
       "name": "Financial Dashboard",
       "short_name": "Financials",
       "description": "Track budgets and profitability",
-      "url": "/office?tab=financials",
-      "icons": [
-        {
-          "src": "/martin-logo.png",
-          "sizes": "192x192",
-          "type": "image/png"
-        }
-      ]
+      "url": "/office?tab=financials"
     }
   ]
 }
