--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,48 +1,16 @@
 {
-  "name": "Martin Builder Operations OS",
   "short_name": "Martin OS",
-  "description": "Martin Builder's comprehensive construction management platform with robust offline capabilities",
-  "start_url": "/",
-  "scope": "/",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4179bc",
-  "orientation": "portrait-primary",
-  "categories": ["business", "productivity", "construction"],
-  "prefer_related_applications": false,
+  "name": "Martin Builder Operations OS",
   "icons": [
     {
       "src": "/martin-logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "/martin-logo.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
     }
   ],
-  "screenshots": [],
-  "shortcuts": [
-    {
-      "name": "Jobs Dashboard",
-      "short_name": "Jobs",
-      "description": "View and manage all jobs",
-      "url": "/office?tab=jobs"
-    },
-    {
-      "name": "Building Estimator",
-      "short_name": "BIM",
-      "description": "3D building estimator with SmartBuild",
-      "url": "/building-estimator"
-    },
-    {
-      "name": "Financial Dashboard",
-      "short_name": "Financials",
-      "description": "Track budgets and profitability",
-      "url": "/office?tab=financials"
-    }
-  ]
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#4179bc",
+  "background_color": "#000000"
 }
