--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,13 +7,13 @@
       "src": "/martin-logo.png", 
       "sizes": "192x192", 
       "type": "image/png", 
-      "purpose": "any maskable" 
+      "purpose": "any" 
     },
     { 
       "src": "/martin-logo.png", 
       "sizes": "512x512", 
       "type": "image/png", 
-      "purpose": "any maskable" 
+      "purpose": "any" 
     }
   ],
   "start_url": "/",
