Add PWA live diagnostic status checker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,8 @@
   "name": "Martin Builder Operations OS",
   "id": "/?source=pwa",
   "icons": [
-    { 
-      "src": "/martin-logo.png", 
-      "sizes": "192x192", 
-      "type": "image/png", 
-      "purpose": "any" 
-    },
-    { 
-      "src": "/martin-logo.png", 
-      "sizes": "512x512", 
-      "type": "image/png", 
-      "purpose": "any" 
-    }
+    { "src": "/martin-logo.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
+    { "src": "/martin-logo.png", "sizes": "512x512", "type": "image/png", "purpose": "any" }
   ],
   "start_url": "/",
   "display": "standalone",
