--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,22 @@
   "short_name": "Martin OS",
   "name": "Martin Builder Operations OS",
   "id": "/?source=pwa",
-  "icons": [
-    { "src": "/martin-logo.png", "sizes": "192x192", "type": "image/png", "purpose": "any" },
-    { "src": "/martin-logo.png", "sizes": "512x512", "type": "image/png", "purpose": "any" }
-  ],
   "start_url": "/",
   "display": "standalone",
+  "background_color": "#000000",
   "theme_color": "#4179bc",
-  "background_color": "#000000"
+  "icons": [
+    {
+      "src": "/martin-logo.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/martin-logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ]
 }
