--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "zod": "^3.23.8",
     "three": "^0.160.0",
     "@react-three/fiber": "^8.15.0",
-    "@react-three/drei": "^9.96.0"
+    "@react-three/drei": "^9.96.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
